idea/testData/multiModuleHighlighting/multiplatform/basic/common/common.kt
expect class <error descr="[NO_ACTUAL_FOR_EXPECT] Expected class 'My' has no actual in module jvm for JVM">My</error> {

}
